--- a/src/home.html
+++ b/src/home.html
@@ -10,6 +10,7 @@
         <main>
             <include src="./components/sale.html"></include>
             <include src="./components/_banner.html"></include>
+            <include src="./components/_variants.html"></include>
         </main>
         <include src="./components/footer.html"></include>
     </body>
