--- a/src/home.html
+++ b/src/home.html
@@ -9,6 +9,7 @@
         <include src="./components/header.html"></include>
         <main>
             <include src="./components/sale.html"></include>
+            <include src="./components/_popular.html"></include>
             <include src="./components/_banner.html"></include>
             <include src="./components/_variants.html"></include>
         </main>
