--- a/src/home.html
+++ b/src/home.html
@@ -13,6 +13,10 @@
             <include src="./components/_popular.html"></include>
             <include src="./components/_banner.html"></include>
             <include src="./components/_variants.html"></include>
+            <include src="./components/_recommendations.html"></include>
+            <include src="./components/_receipts.html"></include>
+            <include src="./components/_news.html"></include>
+            <include src="./components/_consultation.html"></include>
             <include src="./components/_map.html"></include>
         </main>
         <include src="./components/footer.html"></include>
