--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
             <li>
                 <a target="_blank" href="./home.html">главная</a>
             </li>
+            <li>
+                <a target="_blank" href="./catalog.html">каталог</a>
+            </li>
   
         </ol>
 
