feat: catalog page

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,10 @@
                 <a target="_blank" href="./home.html">главная</a>
             </li>
             <li>
-                <a target="_blank" href="./catalog.html">каталог</a>
+                <a target="_blank" href="catalog-categories.html">каталог (категории)</a>
+            </li>
+            <li>
+                <a target="_blank" href="catalog.html">каталог</a>
             </li>
   
         </ol>
