feat: cooperation page

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
             <li>
                 <a target="_blank" href="catalog.html">каталог</a>
             </li>
+            <li>
+                <a target="_blank" href="cooperation.html">сотрудничество</a>
+            </li>
   
         </ol>
 
