--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,12 @@
             <li>
                 <a target="_blank" href="cooperation.html">сотрудничество</a>
             </li>
+            <li>
+                <a target="_blank" href="favorites.html">Избранное</a>
+            </li>
+            <li>
+                <a target="_blank" href="favorites-empty.html">Избранное (пусто)</a>
+            </li>
   
         </ol>
 
