feat: basket page

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,12 @@
                 <li>
                     <a target="_blank" href="promotions.html">Акции</a>
                 </li>
+                <li>
+                    <a target="_blank" href="basket.html">Корзина</a>
+                </li>
+                <li>
+                    <a target="_blank" href="basket-empty.html">Корзина (пустая)</a>
+                </li>
             </ol>
         </div>
         <style>
