--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
                 <li>
                     <a target="_blank" href="basket-empty.html">Корзина (пустая)</a>
                 </li>
+                <li>
+                    <a target="_blank" href="contacts.html">Контакты</a>
+                </li>
             </ol>
         </div>
         <style>
