--- a/src/home.html
+++ b/src/home.html
@@ -7,19 +7,21 @@
         <title>Главная</title>
     </head>
     <body>
-        <include src="./components/header.html"></include>
-        <main>
-            <include src="./components/sale.html"></include>
-            <include src="./components/_popular.html"></include>
-            <include src="./components/_banner.html"></include>
-            <include src="./components/_variants.html"></include>
-            <include src="./components/_recommendations.html"></include>
-            <include src="./components/_receipts.html"></include>
-            <include src="./components/_news.html"></include>
-            <include src="./components/_consultation.html"></include>
-            <include src="./components/_map.html"></include>
-        </main>
-        <include src="./components/footer.html"></include>
+        <div class="wrapper home-page">
+            <include src="./components/header.html"></include>
+            <main>
+                <include src="./components/sale.html"></include>
+                <include src="./components/_popular.html"></include>
+                <include src="./components/_banner.html"></include>
+                <include src="./components/_variants.html"></include>
+                <include src="./components/_recommendations.html"></include>
+                <include src="./components/_receipts.html"></include>
+                <include src="./components/_news.html"></include>
+                <include src="./components/_consultation.html"></include>
+                <include src="./components/_map.html"></include>
+            </main>
+            <include src="./components/footer.html"></include>
+        </div>
     </body>
 </html>
 <!-- Script for Map -->
