--- a/src/favorites.html
+++ b/src/favorites.html
@@ -7,13 +7,15 @@
         <title>Главная</title>
     </head>
     <body>
-        <include src="./components/header.html"></include>
-        <main>
-            <include src="./components/_favorites.html"></include>
-            <include src="./components/_recommendations.html"></include>
-        </main>
-        <include src="./components/footer.html"></include>
-        <include src="./components/modals.html"></include>
+        <div class="wrapper favorites-page">
+            <include src="./components/header.html"></include>
+            <main>
+                <include src="./components/_favorites.html"></include>
+                <include src="./components/_recommendations.html"></include>
+            </main>
+            <include src="./components/footer.html"></include>
+            <include src="./components/modals.html"></include>
+        </div>
     </body>
 </html>
 <script>
