feat: cooperation page mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,9 @@
                 <li>
                     <a target="_blank" href="password-recovery.html">Восстановление пароля</a>
                 </li>
+                <li>
+                    <a target="_blank" href="shipping-and-payment.html">Доставка и оплата</a>
+                </li>
             </ol>
         </div>
         <style>
