--- a/src/cooperation.html
+++ b/src/cooperation.html
@@ -7,104 +7,19 @@
         <title>Главная</title>
     </head>
     <body>
-        <include src="./components/header.html"></include>
-        <main>
-            <include src="./components/_cooperation.html"></include>
-            <include src="./components/_pricing.html"></include>
-            <include src="./components/_benefits.html"></include>
-            <include src="./components/_feature.html"></include>
-            <include src="./components/_figuration.html"></include>
-            <include src="./components/_consultation.html"></include>
-            <include src="./components/_map.html"></include>
-        </main>
+        <div class="wrapper cooperation-page">
+            <include src="./components/header.html"></include>
+            <main>
+                <include src="./components/_cooperation.html"></include>
+                <include src="./components/_pricing.html"></include>
+                <include src="./components/_benefits.html"></include>
+                <include src="./components/_feature.html"></include>
+                <include src="./components/_figuration.html"></include>
+                <include src="./components/_consultation.html"></include>
+                <include src="./components/_map.html"></include>
+            </main>
+        </div>
         <include src="./components/footer.html"></include>
         <include src="./components/modals.html"></include>
     </body>
 </html>
-<script>
-    const markers = [
-        {
-            tag: 'Главный офис',
-            coordinate: [37.539626, 55.65015],
-            active: false,
-            card: 'map-card-1'
-        },
-        {
-            tag: 'Оптово-розничный магазин',
-            coordinate: [37.471102, 55.60101],
-            active: false,
-            card: 'map-card-2'
-        },
-        {
-            tag: 'Склад',
-            coordinate: [37.26184, 55.658317],
-            active: false,
-            card: 'map-card-3'
-        }
-    ];
-
-    async function initMap() {
-        await ymaps3.ready;
-        const { YMap, YMapDefaultSchemeLayer, YMapDefaultFeaturesLayer, YMapMarker } = ymaps3;
-        const map = new YMap(document.getElementById('main-map'), {
-            location: {
-                center: [37.47971415087885, 55.621295640143664],
-                zoom: 12
-            }
-        });
-
-        map.addChild(new YMapDefaultSchemeLayer());
-        map.addChild(new YMapDefaultFeaturesLayer({ zIndex: 1800 }));
-
-        markers.forEach((el, i) => {
-            let content = document.createElement('div');
-            content.classList.add('marker', el.card);
-            content.insertAdjacentHTML(
-                'beforeend',
-                `
-                <div class="marker__content">
-                    <div class="marker__svg">
-                     <img src="./assets/images/marker-logo.svg" alt="" />
-                    </div>
-                    <div class="marker__text">${el.tag}</div>
-                </div>
-			    `
-            );
-            el.active ? content.classList.add('hover') : null;
-            clickMarker(content, el);
-
-            const marker = new YMapMarker({ coordinates: el.coordinate, draggable: false }, content);
-            map.addChild(marker);
-        });
-    }
-
-    function clickMarker(content, marker) {
-        content.addEventListener('mouseenter', function () {
-            changeMarkers(content, marker);
-            document.getElementById(marker.card).classList.add('hover');
-        });
-    }
-
-    function changeMarkers(content, marker) {
-        document.querySelectorAll('.marker').forEach((el) => el.classList.remove('hover'));
-        document.querySelectorAll('.map-card').forEach((el) => el.classList.remove('hover'));
-        markers.forEach((el) => (el.active = false));
-        marker.active = true;
-        content.classList.add('hover');
-    }
-
-    initMap();
-
-    document.querySelectorAll('.map-card').forEach((el) => {
-        el.addEventListener('mouseenter', () => {
-            document.querySelectorAll('.map-card').forEach((el) => el.classList.remove('hover'));
-            document.querySelectorAll('.marker').forEach((el) => el.classList.remove('hover'));
-
-            el.classList.add('hover');
-
-            document.querySelectorAll('.marker').forEach((marker) => {
-                marker.classList.contains(el.id) && marker.classList.add('hover');
-            });
-        });
-    });
-</script>
