--- a/src/about.html
+++ b/src/about.html
@@ -7,13 +7,13 @@
         <title>Главная</title>
     </head>
     <body>
-        <div class="wrapper catalog">
+        <div class="wrapper about-page">
             <include src="./components/header.html"></include>
             <main>
                 <include src="./components/_about-main.html"></include>
+                <include src="./components/_about-director.html"></include>
                 <include src="./components/_about-description.html"></include>
                 <include src="./components/_about-mission.html"></include>
-                <include src="./components/_about-director.html"></include>
                 <include src="./components/_about-worth.html"></include>
                 <include src="./components/_about-task.html"></include>
                 <include src="./components/_banner.html"></include>
