--- a/src/payment.html
+++ b/src/payment.html
@@ -11,6 +11,7 @@
             <include src="./components/header.html"></include>
             <main>
                 <include src="./components/_payment.html"></include>
+                <include src="./components/_banner.html"></include>
             </main>
             <include src="./components/footer.html"></include>
             <include src="./components/modals.html"></include>
