feat: promotion detailed page

--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,9 @@
                 <li>
                     <a target="_blank" href="news.html">Новости</a>
                 </li>
+                <li>
+                    <a target="_blank" href="promotion-detailed.html">Детальная акции</a>
+                </li>
             </ol>
         </div>
         <style>
