--- a/src/card-page-two.page.html
+++ b/src/card-page-two.page.html
@@ -317,7 +317,7 @@
                                         <div class="card__retail-title">Количество:</div>
                                         <div class="card__retail-attention" data-showmore>
                                             <div class="card__retail-attention-text">Закажите на сумму 6 000₽, 
-                                                чтобы прошла скидка 5%%</div>
+                                                чтобы получить скидку 5%</div>
                                             <button class="card__retail-attention-btn" data-showmore-button>
                                                 <div class="text__regular-16">
                                                     <span>Подробнее</span>
@@ -340,7 +340,7 @@
                                                 </figure>
                                             </button>
                                             <div class="card__retail-attention-hide" data-showmore-content="0">Закажите на сумму 6 000₽, 
-                                                чтобы прошла скидка 5%</div>
+                                                чтобы получить скидку 5%</div>
             
                                         </div>
                                         <div class="card__scale">
