--- a/src/library.html
+++ b/src/library.html
@@ -274,7 +274,8 @@
                         <img src="./assets/images/icons/arrow-left.svg" alt="" />
                         Назад
                     </button>
-                    <button class="recommendations__card-button btn__card">
+                    <button type="button"
+class="recommendations__card-button btn__card">
                         <span> В корзину </span>
 
                         <svg
